# particles

./: .gitignore  BUILD.sh  CMakeLists.txt  LICENSE  README.md  sim.html
compute/: b_tracer.wgsl  e_tracer.wgsl  field_common.wgsl  fields.wgsl  particles.wgsl  physical_constants.wgsl
include/glad/: glad.h
kernel/: b_tracer.cl  b_tracer.wgsl  boundary.wgsl  cell.wgsl  e_tracer.wgsl  field_common.cl  field_common.wgsl  fields.cl  fields.wgsl  mesh.wgsl  particles.cl  particles.wgsl  particles_exact.wgsl  particles_pic.wgsl  physical_constants.h  physical_constants.wgsl  torus_wall.wgsl  tracer.cl
kernel/opencl/: defrag.cl  e_tracer.cl  field_common.cl  fields.cl  particles.cl
kernel/wgpu/: b_tracer.wgsl  defrag.wgsl  e_tracer.wgsl  field_common.wgsl  fields.wgsl  particles.wgsl  physical_constants.wgsl
shader/: axes.wgsl  axes_vertex.glsl  cell_box.wgsl  particles.wgsl  particles_vertex.glsl  solenoid.wgsl  solenoid_fragment.glsl  solenoid_vertex.glsl  spheres.wgsl  torus.wgsl  torus_fragment.glsl  torus_structure.wgsl  torus_vertex.glsl  tracer.wgsl  tracer_vertex.glsl  vector.wgsl  vector_vertex.glsl  vertex_shader.glsl
shader/opengl/: torus_vertex.glsl  tracer_fragment.glsl  tracer_vertex.glsl  vector_fragment.glsl
shader/wgpu/: solenoid.wgsl  torus.wgsl
src/: args.cpp  args.h  args_dawn.cpp  args_dawn.h  axes.cpp  axes.h  cell.cpp  cell.h  cl_util.cpp  cl_util.h  current_segment.cpp  current_segment.h  current_segment_dawn.cpp  dawn_demo.cpp  emscripten_key.cpp  emscripten_key.h  field_vector.cpp  field_vector.h  free_space.cpp  free_space.h  gl_util.cpp  gl_util.h  glad.c  keyboard.cpp  keyboard.h  keyboard_dawn.cpp  keyboard_dawn.h  mesh.cpp  mesh.h  particles.cpp  particles.h  plasma.cpp  plasma.h  plasma_dawn.cpp  plasma_dawn.h  scene.cpp  scene.h  scene_dawn.cpp  scene_dawn.h  shader.cpp  (+15 more)
src/compute/: boundary.cpp  boundary.h  fields.cpp  fields.h  particles.cpp  particles.h  particles_exact.cpp  particles_pic.cpp  torus_wall.cpp  torus_wall.h  tracers.cpp  tracers.h
src/dawn/: args.cpp  current_segment.cpp  dawn_demo.cpp  plasma.cpp  plasma.h  scene.cpp  scene.h  sim.cpp  tokamak.cpp
src/dawn/compute/: fields.cpp  fields.h  particles.cpp  particles.h
src/dawn/render/: axes.cpp  axes.h  fields.cpp  fields.h  particles.cpp  particles.h  ring.cpp  ring.h  solenoid.cpp  solenoid.h  torus.cpp  torus.h
src/dawn/shared/: fields.cpp  fields.h  particles.cpp  particles.h
src/dawn/util/: wgpu_util.cpp
src/geometry/: axes.cpp  axes.h  field_vector.cpp  field_vector.h  ring.cpp  ring.h  tracer.cpp  tracer.h
src/opengl/: current_segment.cpp  current_segment.h  keyboard.h  scene.cpp  scene.h  sim.cpp  tokamak.cpp
src/opengl/render/: axes.h  ring.cpp  ring.h  solenoid.h  torus.h  tracer.cpp  tracer.h
src/render/: axes.cpp  axes.h  axes_dawn.cpp  cell_box.cpp  cell_box.h  coils.cpp  coils.h  field_vector.cpp  field_vector.h  fields.cpp  fields.h  particles.cpp  particles.h  particles_dawn.cpp  particles_dawn.h  ring.cpp  ring_dawn.cpp  ring_dawn.h  solenoid.cpp  solenoid.h  solenoid_dawn.cpp  solenoid_dawn.h  spheres.cpp  spheres.h  torus.cpp  torus.h  torus_dawn.cpp  torus_dawn.h  torus_structure.cpp  torus_structure.h  tracer.cpp  tracer.h  tracers.cpp  tracers.h
src/shared/: fields.cpp  fields.h  particles.cpp  particles.h  tracers.cpp  tracers.h
src/util/: cl_util.cpp  cl_util.h  wgpu_util.cpp  wgpu_util.h
tests/: CMakeLists.txt  args_test.cpp  particles_collision_test.cpp  particles_webgpu_collision_test.cpp
